--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/3.view-the-recyclebin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/3.view-the-recyclebin-objects.md
@@ -36,7 +36,7 @@
 
 2. 执行以下语句，查看回收站对象。
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW RECYCLEBIN;
    +-------------------------------------+-------------------+--------+----------------------------+
    | OBJECT_NAME                         | ORIGINAL_NAME     | TYPE   | CREATETIME                 |
@@ -57,9 +57,11 @@
 
    * `TYPE`：表示回收站对象所属的类型。其中：
   
-      * MySQL 模式中，用户租户主要支持 `INDEX`、`TABLE` 和 `DATABASE` 等三种类型。系统租户（`sys` 租户）支持 `INDEX`、`TABLE`、`DATABASE` 和 `TENANT` 等四种类型。本示例中，`oracle001` 即为一个租户类型的回收站对象。
+      * 系统租户（`sys` 租户）支持 `INDEX`、`TABLE`、`DATABASE` 和 `TENANT` 四种类型。本示例中，`oracle001` 即为一个租户类型的回收站对象。
+      
+      * MySQL 用户租户支持 `INDEX`、`TABLE` 和 `DATABASE` 三种类型。
 
-      * Oracle 模式中，主要支持 `INDEX` 和 `TABLE` 两种类型。
+      * Oracle 用户租户支持 `INDEX` 和 `TABLE` 两种类型。
 
    * `CREATETIME`：表示该对象进入回收站的时间。
 
@@ -67,10 +69,10 @@
 
 更多回收站相关的内容，请参见以下信息：
 
-* [回收站支持的对象](1.objects-supported-by-recycle-bin.md)
+* [回收站概述](1.recyclebin-overview.md)
 
-* [开启或关闭回收站](2.turn-the-recycle-bin-on-or-off.md)
+* [开启或关闭回收站](2.turn-the-recyclebin-on-or-off.md)
 
-* [恢复回收站对象](4.restore-the-recycle-bin-obhects.md)
+* [恢复回收站对象](4.restore-the-recyclebin-objects.md)
 
-* [清理回收站](5.purge-the-recycle-bin.md)
+* [清理回收站](5.purge-the-recyclebin.md)
