--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md
@@ -6,15 +6,16 @@
 
 * 在恢复表时，Flashback 对象的顺序需要符合从属关系，即先 Flashback 数据库，再 Flashback 表。
 
-* 通过 `FLASHBACK` 语句恢复表时，表上的索引也会被恢复。
-
-* 通过 `PURGE` 命令可以单独清除索引，但是不能通过 `FLASHBACK` 命令单独恢复索引。
+* 不支持直接恢复索引。在通过 `FLASHBACK` 语句恢复表时，表上的索引也会被恢复。
 
 * 恢复回收站对象时可修改待恢复对象的名称，但是不能与已有对象重名，否则系统会报错。
 
 * 对于 MySQL 租户，从回收站中恢复表前，如果该表从属的数据库已删除，则需要先恢复数据库再恢复表。
 
+<!-->
+
 * 如果一张表在进入回收站前属于某个表组，从回收站中恢复后该表默认会恢复到原表组中；如果原表组已经被删除，则该表恢复后会不属于任何一个表组。
+<-->
 
 ## 恢复租户
 
@@ -244,10 +245,10 @@
 
 更多回收站相关的内容，请参见以下信息：
 
-* [回收站支持的对象](1.objects-supported-by-recycle-bin.md)
+* [回收站概述](1.recyclebin-overview.md)
 
-* [开启或关闭回收站](2.turn-the-recycle-bin-on-or-off.md)
+* [开启或关闭回收站](2.turn-the-recyclebin-on-or-off.md)
 
-* [查看回收站对象](3.view-the-recycle-bin-objects.md)
+* [查看回收站对象](3.view-the-recyclebin-objects.md)
 
-* [清理回收站](5.purge-the-recycle-bin.md)
+* [清理回收站](5.purge-the-recyclebin.md)
