--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/5.purge-the-recyclebin.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/5.purge-the-recyclebin.md
@@ -2,7 +2,7 @@
 
 频繁删除数据库对象并重建，会在回收站产生大量的数据，您可以通过清理回收站的方式来清理这些数据。
 
-清理回收站主要有手动和自动两种方式。MySQL 模式中，用户租户可以清理的回收站对象有 `INDEX`、`TABLE` 和 `DATABASE` 等三种类型。系统租户（`sys` 租户）可以清理的回收站对象有 `INDEX`、`TABLE`、`DATABASE` 和 `TENANT` 等四种类型；Oracle 模式中，用户租户可以清理的回收站对象有 `INDEX` 和 `TABLE` 两种类型。
+清理回收站主要有手动和自动两种方式。系统租户（`sys` 租户）可以清理的回收站对象包括 `INDEX`、`TABLE`、`DATABASE` 和 `TENANT` 四种类型，MySQL 用户租户可以清理的回收站对象包括 `INDEX`、`TABLE` 和 `DATABASE` 等三种类型；Oracle 用户租户可以清理的回收站对象包括 `INDEX` 和 `TABLE` 两种类型。
 
 ## 手动清理回收站
 
@@ -10,7 +10,7 @@
 
 ### 注意事项
 
-* Purge 操作会删除对象和从属于该对象的对象（即 Database->Table->Index）。例如，在 MySQL 模式中，Purge 数据库会删除数据库和从属于该数据库的表和表索引。
+* Purge 操作会删除对象和从属于该对象的对象（即 Database -> Table -> Index）。例如，在 MySQL 模式中，Purge 数据库会删除数据库和从属于该数据库的表和表索引。
 
 * 当一个对象的上层对象被 Purge，那么当前回收站中关联的下一层对象也会被 Purge。
 
@@ -60,7 +60,7 @@
 
      语句如下：
 
-     ```sql
+     ```shell
      obclient [(none)]> PURGE TENANT tenant_name;
      ```
 
@@ -68,7 +68,7 @@
 
      示例如下：
 
-     ```sql
+     ```shell
      obclient [(none)]> PURGE TENANT oracle001;
 
      obclient [(none)]> PURGE TENANT RECYCLE_$_100017_1672050541224936;
@@ -78,7 +78,7 @@
   
      仅 `sys` 租户和 MySQL 用户租户支持清理回收站中的数据库对象。
 
-     ```sql
+     ```shell
      obclient> PURGE DATABASE object_name;
      ```
 
@@ -86,7 +86,7 @@
 
      示例如下：
 
-     ```sql
+     ```shell
      obclient [(none)]> PURGE DATABASE __recycle_$_100017_1673854707660504;
      ```
 
@@ -100,7 +100,7 @@
 
      示例如下：
 
-     ```sql
+     ```shell
      obclient [(none)]> PURGE TABLE __recycle_$_100017_1673426335331800;
      ```
 
@@ -114,21 +114,19 @@
 
      示例如下：
 
-     ```sql
+     ```shell
      obclient [(none)]> PURGE INDEX __recycle_$_100017_1673426335319344;
      ```
 
    * 将所有对象从回收站中彻底清除
 
-     ```sql
+     ```shell
      obclient [(none)]> PURGE RECYCLEBIN;
      ```
 
-     `object_name` 表示该 Schema 对象在回收站中的名称。
-
 4. 命令执行成功后，可以再次执行 `SHOW RECYCLEBIN` 语句，确认回收站中的对象是否成功清理。
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW RECYCLEBIN;
    ```
 
@@ -138,7 +136,7 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 * 值为 `0s` 时，表示关闭自动 Purge 回收站功能。
 
-* 值为非 `0s` 时，表示回收一段时间前进入回收站的 Schema 对象。
+* 值为非 `0s` 时，表示 Purge 一段时间前进入回收站的对象。
 
 有关集群级配置项 `recyclebin_object_expire_time` 的更多信息，请参见 [recyclebin_object_expire_time](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md)。
 
@@ -156,13 +154,13 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
    开启自动清理回收站功能，并回收 7 天前进入回收站的 Schema 对象，示例语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]>  ALTER SYSTEM SET recyclebin_object_expire_time = '7d';
    ```
 
 3. （可选）完成后，可以执行以下语句，确认回收站中符合条件的对象是否被清理。
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW RECYCLEBIN;
    ```
 
@@ -170,10 +168,10 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 更多回收站相关的内容，请参见以下信息：
 
-* [回收站支持的对象](1.objects-supported-by-recycle-bin.md)
+* [回收站概述](1.recyclebin-overview.md)
 
-* [开启或关闭回收站](2.turn-the-recycle-bin-on-or-off.md)
+* [开启或关闭回收站](2.turn-the-recyclebin-on-or-off.md)
 
-* [查看回收站对象](3.view-the-recycle-bin-objects.md)
+* [查看回收站对象](3.view-the-recyclebin-objects.md)
 
-* [恢复回收站对象](4.restore-the-recycle-bin-obhects.md)
+* [恢复回收站对象](4.restore-the-recyclebin-objects.md)
