--- a/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
+++ b/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
@@ -1,11 +1,76 @@
 # 副本介绍
 
+## 副本概念
+
 副本是 OceanBase 数据库存储引擎中的概念，同一份数据在不同节点的拷贝称为副本，这里的数据是一个用户层面的概念。
 
-在 OceanBase 数据库层面，我们指日志流，日志流是 OceanBase 4.0 新引入的概念，用于描述用户数据在数据库层面的物理形式。
+在 OceanBase 数据库层面，我们指数据分区，每个数据分区根据租户的 Locality 属性冗余有多份，从而提供良好的水平扩展性和更高级别的容灾能力。
 
-副本是为了提高 OceanBase 数据库的可用性和容错性而引入的概念，副本可以被分配在不同的地理位置，以应对网络故障或数据中心故障。OceanBase 通过日志同步方式将数据复制到多个副本，以防止数据丢失，确保系统在一个或多个节点故障时，数据可以从其他节点中检索。OceanBase 副本数据包括三种类型：RedoLog、MemTable、SSTable。
+数据分区是指根据一定的建表规则，把一个表或者索引分解成多个更小的、更容易管理的部分。每个数据分区都是一个独立的对象，具有自己的名称和可选的存储特性。
 
-OceanBase 数据库的存储引擎采用分层 LSM-Tree 结构，数据分为两部分：基线数据和增量数据。基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog ）。这些数据冗余有多份（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个节点间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
+<main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>OceanBase 以多副本架构著称，基于 Paxos 协议的多副本架构是高可用能力的基础。多副本中的“副本”本质是同一份数据在不同节点的拷贝，而数据在 OceanBase 中有多种层面的承载容器，例如数据分区、日志流、Unit、租户等。一般情况下我们提及的“副本”往往是指“数据分区副本”。但需要注意的是，不同语境下的“副本”可能对应着不同的数据库实体。</p>
+</main>
 
-OceanBase 4.0 支持的副本类型为全功能副本，也称为普通副本，其名称为FULL，简称F，拥有 RedoLog，MemTable 和 SSTable 等全部完整的数据和功能。全功能副本有角色的概念，即日志流有角色的概念，Leader 和 Follower，Leader 对外提供强一致读写服务，Follower 可以随时快速切换为 Leader 对外提供服务。
+## 副本的作用
+
+副本提高了 OceanBase 数据库的可用性和容错性，副本可以被分配在不同的地理位置，以应对网络故障或数据中心故障。
+
+OceanBase 通过分区复制、日志同步等方式将数据复制到多个副本以防止数据丢失，确保 OceanBase 在少数派副本故障的情况下依然能够提供无损的数据库服务。
+
+## 副本的类型
+
+OceanBase 数据库的存储引擎采用分层 LSM-Tree 结构，数据分为两部分：基线数据和增量数据。
+
+基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。
+
+增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称CLog ）。
+
+这些数据冗余有多份（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个节点间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
+
+OceanBase 4.0 支持的副本类型为全功能副本，也称为普通副本，其名称为FULL，简称F，拥有 RedoLog，MemTable 和 SSTable 等全部完整的数据和功能。
+
+全功能副本有角色的概念，即数据分区有角色的概念，分别是 Leader 和 Follower。Leader 主要对外提供写服务和强一致读服务，也可以提供弱一致读服务。Follower 对外提供弱一致读服务，当 Leader 故障下还可以快速切换为 Leader 对外提供服务。
+
+## 日志流介绍
+
+### 日志流概念
+
+日志流是由 OceanBase 数据库自动创建和管理的实体，它代表了一批数据的集合，包括若干数据分区，及对其进行事务操作的日志和事务管理结构。RedoLog 是基于 Paxos 协议实现的日志模块，实现了多副本间日志同步，保证副本间数据的一致性，实现了数据的高可用。TxCtxMgr 是事务管理结构，日志流内所有数据分区的修改可以在日志流内部完成原子提交，事务跨多个日志流时使用 OceanBase 优化的两阶段提交协议完成事务的原子提交，日志流是分布式事务的参与者。
+
+日志流是 OceanBase 4.0 新引入的概念，OceanBase 4.0 相比于 OceanBase 3.x 最大的改变就是改变了事务提交的基本单位，从而在资源、性能、功能三个方面带来了很大价值。
+
+* 在 OceanBase 3.x 中，OceanBase 以分区为单位进行事务提交，分区内的修改由分区内 WAL 保证修改的原子性，每个分区作为两阶段提交的参与者，事务提交的基本单位是分区。
+  
+* 在 OceanBase 4.0 中，OceanBase 以日志流为单位进行事务提交，日志流内的修改由日志流内 WAL 保证修改的原子性，每个日志流作为两阶段提交的参与者，事务提交的基本单位是日志流。
+
+### 查看日志流的基本信息
+
+通过 `oceanbase.DBA_OB_LS` 视图可以查看本租户所有日志流的基本信息，包括状态、日志进度等。例如：
+
+```shell
+obclient> SELECT * FROM oceanbase.DBA_OB_LS limit 10;
++-------+--------+----------------------------------------+---------------+-------------+------------+----------+----------+--------------+
+| LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN | DROP_SCN | SYNC_SCN | READABLE_SCN |
++-------+--------+----------------------------------------+---------------+-------------+------------+----------+----------+--------------+
+|     1 | NORMAL | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 |             0 |           0 |       NULL |     NULL |     NULL |         NULL |
++-------+--------+----------------------------------------+---------------+-------------+------------+----------+----------+--------------+
+1 row in set
+```
+
+以上语句可以在系统租户和用户租户执行，以查看本租户对应的日志流的基本信息。例如上例在系统租户执行，所示为系统租户仅有的一个 1 号日志流。
+
+### 查看日志流的的位置信息和角色信息
+
+日志流具有位置信息，记录了其分布于哪些节点，可以通过 `oceanbase.DBA_OB_LS_LOCATIONS` 视图的 `MEMBER_LIST` 字段查看。数据分区不再独立拥有位置信息，而是由其归属于的日志流位置决定。日志流支持在不同节点之间迁移和复制，以达到性能均衡和容灾的目的。
+
+日志流具有角色信息，记录其是 LEADER 还是 FOLLOWER，可以通过 `oceanbase.DBA_OB_LS_LOCATIONS` 视图的 `ROLE` 字段查看。数据分区不再独立拥有角色信息，而是由其归属于的日志流角色决定。日志流角色通过选举协议产生。
+
+关于视图 `oceanbase.DBA_OB_LS_LOCATIONS`的详细介绍，参见 [oceanbase.DBA_OB_LS_LOCATIONS](../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/44.oceanbase-dba_ob_ls_locations-of-mysql-mode.md)
+
+### 查看数据分区到日志流的映射
+
+通过 `DBA_OB_TABLE_LOCATIONS` 视图可以查看本租户数据分区到日志流的映射，其中每个数据分区的每个副本都是一条记录，记录了该数据分区的基本信息，及其所归属的日志流信息。
+
+关于视图 `oceanbase.DBA_OB_TABLE_LOCATIONS`的详细介绍，参见 [oceanbase.DBA_OB_LS_LOCATIONS](../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/178.oceanbase-dba_ob_table_locations-of-mysql-mode.md)
