--- a/zh-CN/6.manage/3.replica-management/4.data-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/4.data-distribution.md
@@ -20,13 +20,13 @@ OceanBase 4.0 开始在租户管理上增加了限制，要求同一个租户所
 
 ```shell
 obcllient> select UNIT_ID,TENANT_ID,UNIT_GROUP_ID,ZONE,SVR_IP,SVR_PORT from DBA_OB_UNITS where TENANT_ID = 1004;
-+---------+-----------+---------------+--------------+------------+----------+
-| UNIT_ID | TENANT_ID | UNIT_GROUP_ID | ZONE         | SVR_IP     | SVR_PORT |
-+---------+-----------+---------------+--------------+------------+----------+
-|    1004 |      1004 |          1003 | sa128_obv4_1 | 6.3.27.47  |     2882 |
-|    1005 |      1004 |          1003 | sa128_obv4_2 | 6.0.132.81 |     2882 |
-|    1006 |      1004 |          1003 | sa128_obv4_3 | 6.0.187.19 |     2882 |
-+---------+-----------+---------------+--------------+------------+----------+
++---------+-----------+---------------+--------------+-------------+----------+
+| UNIT_ID | TENANT_ID | UNIT_GROUP_ID | ZONE         | SVR_IP      | SVR_PORT |
++---------+-----------+---------------+--------------+-------------+----------+
+|    1004 |      1004 |          1003 | sa128_obv4_1 | xx.xx.xx.47 |     2882 |
+|    1005 |      1004 |          1003 | sa128_obv4_2 | xx.xx.xx.81 |     2882 |
+|    1006 |      1004 |          1003 | sa128_obv4_3 | xx.xx.xx.19 |     2882 |
++---------+-----------+---------------+--------------+-------------+----------+
 3 rows in set
 ```
 
