--- a/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
+++ b/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
@@ -10,14 +10,14 @@
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>OceanBase 以多副本架构著称，基于 Paxos 协议的多副本架构是高可用能力的基础。多副本中的“副本”本质是同一份数据在不同节点的拷贝，而数据在 OceanBase 中有多种层面的承载容器，例如数据分区、日志流、Unit、租户等。一般情况下我们提及的“副本”往往是指“数据分区副本”。但需要注意的是，不同语境下的“副本”可能对应着不同的数据库实体。</p>
+    <p>OceanBase 数据库以多副本架构著称，基于 Paxos 协议的多副本架构是高可用能力的基础。多副本中的”副本”本质是同一份数据在不同节点的拷贝，而数据在 OceanBase 数据库中有多种层面的承载容器，例如数据分区、日志流、Unit、租户等。一般情况下我们提及的“副本”往往是指“数据分区副本”。但需要注意的是，不同语境下的“副本”可能对应着不同的数据库实体。</p>
 </main>
 
 ## 副本的作用
 
 副本提高了 OceanBase 数据库的可用性和容错性，副本可以被分配在不同的地理位置，以应对网络故障或数据中心故障。
 
-OceanBase 通过分区复制、日志同步等方式将数据复制到多个副本以防止数据丢失，确保 OceanBase 在少数派副本故障的情况下依然能够提供无损的数据库服务。
+OceanBase 数据库通过分区复制、日志同步等方式将数据复制到多个副本以防止数据丢失，确保 OceanBase 数据库在少数派副本故障的情况下依然能够提供无损的数据库服务。
 
 ## 副本的类型
 
@@ -25,11 +25,11 @@ OceanBase 数据库的存储引擎采用分层 LSM-Tree 结构，数据分为两
 
 基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。
 
-增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称CLog ）。
+增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog ）。
 
 这些数据冗余有多份（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个节点间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
 
-OceanBase 4.0 支持的副本类型为全功能副本，也称为普通副本，其名称为FULL，简称F，拥有 RedoLog，MemTable 和 SSTable 等全部完整的数据和功能。
+OceanBase 数据库 4.0 支持的副本类型为全功能副本，也称为普通副本，其名称为 FULL，简称F，拥有 RedoLog、MemTable 和 SSTable 等全部完整的数据和功能。
 
 全功能副本有角色的概念，即数据分区有角色的概念，分别是 Leader 和 Follower。Leader 主要对外提供写服务和强一致读服务，也可以提供弱一致读服务。Follower 对外提供弱一致读服务，当 Leader 故障下还可以快速切换为 Leader 对外提供服务。
 
@@ -39,11 +39,11 @@ OceanBase 4.0 支持的副本类型为全功能副本，也称为普通副本，
 
 日志流是由 OceanBase 数据库自动创建和管理的实体，它代表了一批数据的集合，包括若干数据分区，及对其进行事务操作的日志和事务管理结构。RedoLog 是基于 Paxos 协议实现的日志模块，实现了多副本间日志同步，保证副本间数据的一致性，实现了数据的高可用。TxCtxMgr 是事务管理结构，日志流内所有数据分区的修改可以在日志流内部完成原子提交，事务跨多个日志流时使用 OceanBase 优化的两阶段提交协议完成事务的原子提交，日志流是分布式事务的参与者。
 
-日志流是 OceanBase 4.0 新引入的概念，OceanBase 4.0 相比于 OceanBase 3.x 最大的改变就是改变了事务提交的基本单位，从而在资源、性能、功能三个方面带来了很大价值。
+日志流是 OceanBase 数据库 4.0 新引入的概念，OceanBase 数据库 4.0 相比于 OceanBase 数据库 3.x 最大的改变就是改变了事务提交的基本单位，从而在资源、性能、功能三个方面带来了很大价值。
 
-* 在 OceanBase 3.x 中，OceanBase 以分区为单位进行事务提交，分区内的修改由分区内 WAL 保证修改的原子性，每个分区作为两阶段提交的参与者，事务提交的基本单位是分区。
+* 在 OceanBase 数据库 3.x 中，OceanBase 数据库以分区为单位进行事务提交，分区内的修改由分区内 WAL 保证修改的原子性，每个分区作为两阶段提交的参与者，事务提交的基本单位是分区。
   
-* 在 OceanBase 4.0 中，OceanBase 以日志流为单位进行事务提交，日志流内的修改由日志流内 WAL 保证修改的原子性，每个日志流作为两阶段提交的参与者，事务提交的基本单位是日志流。
+* 在 OceanBase 数据库 4.0 中，OceanBase 数据库以日志流为单位进行事务提交，日志流内的修改由日志流内 WAL 保证修改的原子性，每个日志流作为两阶段提交的参与者，事务提交的基本单位是日志流。
 
 ### 查看日志流的基本信息
 
