--- a/en-US/7.reference/7.command-line-tools/7.ob-admin/1.overview-of-ob_admin.md
+++ b/en-US/7.reference/7.command-line-tools/7.ob-admin/1.overview-of-ob_admin.md
@@ -20,7 +20,7 @@ You can compile ob_admin based on the source code of OceanBase Database.
 
 ## Features
 
-ob_admin provides the slog_tool, archive_tool, clog_tool, dumpsst, and dump_backup features to check for issues such as data inconsistency, data loss, and data errors. The following sections describe these features respectively.
+ob_admin provides the slog_tool, clog_tool, dumpsst, and dump_backup features to check for issues such as data inconsistency, data loss, and data errors. The following sections describe these features respectively.
 
 ### slog_tool
 
@@ -33,16 +33,6 @@ $./ob_admin slog_tool -f ../store/slog/1
 > **Note**
 >
 > The path in the slog_tool command must begin with a period (.) or slash (/).
-
-### archive_tool
-
-archive_tool parses archived log files. Archived files are divided into the following types:
-
-* Data files: archived log files.
-* Index files: index files of the index directory corresponding to data files.
-* archive_key files: files that provide the archive_key information about auxiliary files.
-
-For more information, see [archive_tool](../7.ob-admin/2.archive_tool.md).
 
 ### clog_tool
 
