--- a/zh-CN/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
+++ b/zh-CN/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
@@ -1,8 +1,8 @@
-# 容灾管理概述
+# 高可用概述
 
-数据库系统在应用架构中承担了数据存储和查询的功能，其对企业数据安全和保障业务连续性至关重要。高可用是数据库系统架构设计中首要考虑的因素，高可用诉求包括服务高可用和数据高可用。本文将介绍 OceanBase 的服务容灾技术，数据容灾技术将在后面的《备份恢复》章节中介绍。
+数据库系统在应用架构中承担了数据存储和查询的功能，其对企业数据安全和保障业务连续性至关重要。高可用是数据库系统架构设计中首要考虑的因素，高可用诉求包括服务高可用和数据高可靠。本文将介绍 OceanBase 的服务高可用技术，数据高可靠技术将在后面的《备份恢复》章节中介绍。
 
-OceanBase 数据库具备多样化的服务容灾技术，包括集群内的多副本容灾和集群间的主备集群容灾：
+OceanBase 数据库具备多样化的服务高可用技术，包括集群内的多副本容灾和集群间的主备集群容灾：
 
 * 多副本容灾：多副本容灾技术面向单个集群，事务日志持久化并在多个副本之间同步日志数据，基于 Paxos 协议保证日志数据在多数派副本持久化成功，同时通过成员变更提供容灾能力。
 
