根据永乐的意见修改

--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -2,6 +2,12 @@
 
 在进行备份前，需要配置备份目的端及备份相关的参数。
 
+## 数据备份架构
+
+数据备份优先选择备副本进行备份。数据备份的架构如下图所示。
+
+![数据备份架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-backup-architecture.png)
+
 ## 配置备份目的端
 
 1. 用户租户的租户管理员登录数据库。
