--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -4,7 +4,7 @@
 
 ## 数据备份架构
 
-数据备份优先选择备副本进行备份。数据备份的架构如下图所示。
+数据备份优先选择 Follower 副本进行备份。数据备份的架构如下图所示。
 
 ![数据备份架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-backup-architecture.png)
 
