根据永乐的comments 同步修改

--- a/zh-CN/6.manage/4.high-availability/4.flashback-query.md
+++ b/zh-CN/6.manage/4.high-availability/4.flashback-query.md
@@ -15,6 +15,8 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
   闪回表的相关操作请参见 [闪回表](3.recyclebin-management/4.flashback-table-before-drop.md)。
   
 * 假设当前时间为 `T`，设置 `undo_retention` 后，如果在 `T - undo_retention` 时间段内有 DDL 操作，系统会用最新的数据字典解释表的数据。对于 DDL 操作发生前产生的数据，被删除的列的数据将变成删除状态，新添加列的数据则设为 Default 值。
+
+* 闪回查询需要额外的存储空间来保留历史数据，如果调大 `undo_retention` 会导致存储空间的放大。建议调大 `undo_retention` 后，留意存储空间的变化。
   
 ## 前提条件
 
