--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
@@ -1,6 +1,6 @@
 # 行级访问权限控制
 
-OceanBase 数据库兼容了 Oracle 的 Label Security 功能，可以在行级别对访问进行控制，保证读写数据的安全。
+OceanBase 数据库兼容了 Oracle 的 Label Security 功能，可以在行级别对访问进行控制，保证读写数据的安全。基于 Label Security 可以构建对行级数据细粒度访问控制的安全策略。在创建策略后，将该策略应用于需要保护的表，并将标签授予用户。
 
 Label Security 是强制访问控制的一种方式，通过在表中添加一个 Label 列来记录每行的 Label 值，在访问时通过比较用户的 Label 和数据的 Label，达到约束主体（用户）对客体（表中的数据）访问的目的。
 
