--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/3.add-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/3.add-replica.md
@@ -20,7 +20,15 @@
 
 * Locality 变更一次只能执行一个动作，例如把 Zone3 替换为 Zone4，不能直接替换，可以先增加一个 Zone4，然后再减少一个 Zone3。
 
-* 通过增加副本会导致租户 Locality 与 租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
+* 修改 Locality 时需要关注对 Primary Zone 的影响，建议提前调整 Primary Zone。
+  
+  例如：
+  
+    1. 需要减少 zone3，如果 zone3 属于第一优先级的 Primary Zone，则调整 Locality 过程会影响租户读写服务。
+
+    2. 增加 zone4 时，如果 Primary Zone 为 RANDOM，那么后续 zone4 也会提供读写服务。
+
+* 需要确认租户在目标 Zone 上是否有资源池，如果没有，则需要调整现有资源池的 Zone 列表，或者新增一个资源池给租户，如果新增资源池，要求资源池的 Unit 个数与租户已有的资源池一致，调整资源池或新增资源池的详细操作，参见 [修改资源池属性](pr 合并后添加)或 [创建资源池](pr 合并后添加)。
 
 ## 操作步骤
 
