--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/4.reduce-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/4.reduce-replica.md
@@ -22,6 +22,14 @@
 
 * 通过增加副本会导致租户 Locality 与 租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
+* 减少副本后，如果要释放资源，还需要注意缩减目标租户的资源池。
+  
+   以 `z1,z2,z3` 为例，删除 `z3`，有两种场景：
+
+   1. 租户在 `z3` 上有独立的资源池，例如：租户有 `resource_pool1` 和 `resource_pool2` 两个资源池，其中 `resource_pool2` 位于 `z3`，那么减少副本后，需要将 `resource_pool2` 从租户的资源池列表移除，然后可以选择删除资源池，真正释放资源，删除资源池的详细操作，参见 [删除资源池](pr 合并后添加)。
+
+   2. `z3` 上没有独立的资源池，比如：租户的资源池 `resource_pool1` 位于 `z2` 和 `z3`，那么减少副本后，需要调整 `resource_pool1` 的 `zone` 列表，移除 `z3`，真正释放资源，调整资源池 `zone` 列表，参见 [修改资源池属性](pr 合并后添加)。
+
 ## 操作步骤
 
 示例：通过修改租户 `mysql001` 的 Locality，由 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 修改为 `FULL{1}@zone1, FULL{1}@zone2` ，减少租户的副本数。
