--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/3.add-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/3.add-replica.md
@@ -6,7 +6,9 @@
 
 ## 前提条件
 
-变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
+增加副本之前，首先需要确认租户在目标 Zone 上是否有资源池，如果没有，则需要调整现有资源池的 Zone 列表，或者新增一个资源池给租户，如果新增资源池，要求资源池的 Unit 个数与租户已有的资源池一致，调整资源池或新增资源池的详细操作，参见 [修改资源池属性](pr 合并后添加)或 [创建资源池](pr 合并后添加)。
+
+同时还需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的节点资源不足导致无法存放租户需要的资源单元，将导致无法进行 Locality 变更。
 
 有关 Zone 上资源单元和资源池的状态的检查方法，参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
 
@@ -27,8 +29,6 @@
     1. 需要减少 zone3，如果 zone3 属于第一优先级的 Primary Zone，则调整 Locality 过程会影响租户读写服务。
 
     2. 增加 zone4 时，如果 Primary Zone 为 RANDOM，那么后续 zone4 也会提供读写服务。
-
-* 需要确认租户在目标 Zone 上是否有资源池，如果没有，则需要调整现有资源池的 Zone 列表，或者新增一个资源池给租户，如果新增资源池，要求资源池的 Unit 个数与租户已有的资源池一致，调整资源池或新增资源池的详细操作，参见 [修改资源池属性](pr 合并后添加)或 [创建资源池](pr 合并后添加)。
 
 ## 操作步骤
 
