--- a/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/4.join-order-and-join-algorithm.md
+++ b/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/4.join-order-and-join-algorithm.md
@@ -10,7 +10,7 @@
 
 一棵连接树一般表示为翻转的树状接口，如下图所示，`T1` 是连接左侧的表，也称之为驱动表，一般是维度表，`T2` 是连接右侧的表，一般是事实表。优化器一般自左向右处理连接的表。
 
-![join1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join1.jpg)
+![join1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join-1.png)
 
 连接的数据源也可以来自于另外一个连接的结果，如果左侧数据源来自于另一个连接的结果，右侧数据源来自于基表，我们称之为左深树，大部分的业务计划都是左深树。如下图所示。
 
