修改图片尺寸

--- a/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/4.join-order-and-join-algorithm.md
+++ b/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/4.join-order-and-join-algorithm.md
@@ -14,15 +14,15 @@
 
 连接的数据源也可以来自于另外一个连接的结果，如果左侧数据源来自于另一个连接的结果，右侧数据源来自于基表，我们称之为左深树，大部分的业务计划都是左深树。如下图所示。
 
-![join2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join2.jpg)
+![join2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join-2.png)
 
 如果右侧数据源来自于另外一个连接的结果，左侧数据源来自于基表，我们称之为右深树，如下图所示。
 
-![join3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join3.jpg)
+![join3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join-3.png)
 
 如果有任何一个连接节点与其他连接节点的形态不同，我们称之为浓密连接树，如下图所示。
 
-![join4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join4.jpg)
+![join4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer/V4.0.0/join-4.png)
 
 ### 优化器如何优化连接
 
