--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/178.user_tab_cols-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/178.user_tab_cols-of-oracle-mode.md
@@ -4,7 +4,7 @@ USER_TAB_COLS
 功能
 -----------
 
-查看当前用户拥有的表、视图、集群的所有列。
+查看当前用户拥有的表的所有列。
 
 这个视图与 USER_TABLE_COLUMNS 区别在于没有对隐藏列进行过滤。
 
@@ -25,7 +25,7 @@ USER_TAB_COLS
 
 |       **字段名称**       |     **类型**     | **是否可以为 NULL** |                                                            **描述**                                                             |
 |----------------------|----------------|----------------|-------------------------------------------------------------------------------------------------------------------------------|
-| TABLE_NAME           | VARCHAR2(128)  | NO             | 表、视图的名字                                                                                                                       |
+| TABLE_NAME           | VARCHAR2(128)  | NO             | 表的名字                                                                                                                       |
 | COLUMN_NAME          | VARCHAR2(128)  | NO             | 列名                                                                                                                            |
 | DATA_TYPE            | VARCHAR2(128)  | NO             | 列类型                                                                                                                           |
 | DATA_TYPE_MOD        | VARCHAR2(3)    | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                       |
@@ -60,3 +60,11 @@ USER_TAB_COLS
 | INTERNAL_COLUMN_ID   | NUMBER         | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                       |
 | HISTOGRAM            | VARCHAR2(15)   | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                       |
 | QUALIFIED_COL_NAME   | VARCHAR2(4000) | NO             | 限定列名                                                                                                                          |
+| USER_GENERATED       | VARCHAR2(3)    | NO             | 目前暂不支持该字段，当前该字段默认为 YES                                                                                                                           |
+| DEFAULT_ON_NULL      | VARCHAR2(3)    | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
+| IDENTITY_COLUMN      | VARCHAR2(3)    | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
+| EVALUATION_EDITION   | VARCHAR2(128)  | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
+| UNUSABLE_BEFORE      | VARCHAR2(128)  | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
+| UNUSABLE_BEGINNING   | VARCHAR2(128)  | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
+| COLLATION            | VARCHAR2(100)  | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
+| COLLATED_COLUMN_ID   | NUMBER         | NO             | 目前暂不支持该字段，当前该字段默认为 NULL                                                                                                                           |
