根据炎风的建议修改

--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -30,7 +30,15 @@
    obclient [(none)]> SET DECRYPTION IDENTIFIED BY '******','******'；
    ```
 
-3. 执行以下语句，开始执行恢复任务。
+3. 设置配置项 `restore_concurrency`。
+
+   集群级配置项 `restore_concurrency` 用于控制恢复是否允许进行。默认值为 0，取值范围为 [0, 512]，值设置为大于 0 即可，该配置项将在 4.1 版本后废弃不再使用。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
+
+   ```shell
+   obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 10;
+   ```
+
+4. 执行以下语句，开始执行恢复任务。
 
    语句如下：
 
@@ -106,9 +114,7 @@
          obclient [(none)]> ALTER SYSTEM RESTORE mysql FROM 'oss://oceanbase-test-bucket/backup/data/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx,oss://oceanbase-test-bucket/backup/archive/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx' UNTIL TIME='2022-06-1 00:00:00' WITH 'pool_list=restore_pool';
          ```
 
-4. （可选）在待恢复租户对应的 Meta 租户创建成功后，设置恢复任务相关的性能参数。
-
-   目前，与恢复任务相关的配置项主要有两个：集群级别配置项 `restore_concurrency` 和租户级别配置项 `ha_low_thread_score`, 两个配置项均用于控制恢复任务的并发参数，但是用途不同。
+4. （可选）在待恢复租户对应的 Meta 租户创建成功后，如果需要加速恢复，可以通过配置项 `ha_low_thread_score` 配置恢复任务的后台调度权重。
 
    1. 通过 `oceanbase.DBA_OB_TENANTS` 视图查看待恢复租户对应的 Meta 租户是否创建成功。
 
@@ -122,17 +128,13 @@
 
       更多视图 `oceanbase.DBA_OB_TENANTS` 的字段说明信息请参见 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-   2. 设置配置项 `restore_concurrency` 和 `ha_low_thread_score`。
-
-      集群级配置项 `restore_concurrency` 用于控制恢复是否允许进行。默认值为 0，取值范围为 [0, 512]，且该配置项将在 4.1 版本后废弃不再使用。有关配置项 `restore_concurrency` 的更多介绍，请参见 [restore_concurrency](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/170.restore_concurrency.md)。
+   2. 设置配置项 `ha_low_thread_score`。
 
       租户级配置项 `ha_low_thread_score` 用于设置高可用低优先级线程的当前工作线程数。默认值为 0，取值范围为 [0, 100]，建议修改为 10。有关配置项 `ha_low_thread_score` 的更多介绍，请参见 [ha_low_thread_score](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/43.ha_low_thread_score.md)。
 
       语句示例如下：
 
       ```shell
-      obclient [(none)]> ALTER SYSTEM SET restore_concurrency = 10;
-
       obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
       ```
 
