--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -45,7 +45,7 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
 
 * 非通断型故障（例如网卡丢包导致的机器不稳定）强依赖节点隔离，否则会发生反复切主而影响应用。
 
-* 通断型故障（例如机器直接宕机）不强依赖节点隔离，其会在 `oceanbase.DBA_OB_ZONES` 视图标记节点状态为 `INACTIVE` 而隔离应用流量。
+* 通断型故障（例如机器直接宕机）不强依赖节点隔离，其会在 `oceanbase.DBA_OB_SERVERS` 视图标记节点状态为 `INACTIVE` 而隔离应用流量。
 
 在节点隔离或者 Leader 出现故障时，会触发选举。选举服务的优先级机制会考虑用户指定的 Primary Zone，考虑机器的异常状态等，从而保证选择更优的副本作为主副本。
 
