--- a/zh-CN/7.reference/1.oceanbase-database-concepts/11.database-security/4.transmission-encryption.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/11.database-security/4.transmission-encryption.md
@@ -16,11 +16,7 @@ OceanBase 数据库从产品架构层面可以分为以下三个基本部分。
 
 ## 支持的私钥/证书加载方式
 
-OBServer 节点、liboblog、obadmin 等组件由于底层通信均依赖 Libeasy 库，因此支持的私钥/证书加载方式均相同。
-
-* 本地文件模式
-
-  将 CA 证书、用户证书、私钥放在 `wallet` 文件夹下，根据配置项开启时从该目录下读取加载，安全性较差。
+OBServer 节点、liboblog、obadmin 等组件由于底层通信均依赖 Libeasy 库，因此支持的私钥/证书加载方式均相同，为本地文件模式。即将 CA 证书、用户证书、私钥放在 `wallet` 文件夹下，根据配置项开启时从该目录下读取加载，安全性较差。
   
 ## 开启方式
 
