--- a/en-US/9.release-notes/100.V4.0/1.V4.0.0.md
+++ b/en-US/9.release-notes/100.V4.0/1.V4.0.0.md
@@ -124,7 +124,7 @@ This version provides the following core capabilities:
 
    * Prepare a statement: `PREPARE stmt1 FROM 'SELECT SQRT(POW(?,2) + POW(?,2))';`
 
-   * Execute the prepared statement: `SET @a = 3; SET @b = 4; EXECUTE stmt1 USING @a, @b;；`
+   * Execute the prepared statement: `SET @a = 3; SET @b = 4; EXECUTE stmt1 USING @a, @b;`
 
    * Release the prepared statement: `DEALLOCATE PREPARE stmt1;`
 
