修订评审意见

--- a/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/5.sorting-and-limit.md
+++ b/zh-CN/6.manage/9.sql-tuning/2.plan-optimization/5.sorting-and-limit.md
@@ -1,10 +1,10 @@
 # 排序和 LIMIT 优化
 
-`ORDER BY` + `LIMIT` 是常见的业务查询场景，用于获取排序后的一定行数的结果集。为获取这些结果集，最终生成的的查询计划可能仅需要从相关表上读取很少的数据，得到一个执行效率高的计划，也可能需要读取相关表的全部数据经过一定运算后仅返回需要的结果行，相比前者这一般是个效率较差的计划。在这种场景的调优中，需要理解产生这两种计划的原因并通过一些优化方法获得效率较高的计划。
+`ORDER BY` + `LIMIT` 是常见的业务查询场景，用于获取排序后的一定行数的结果集。为获取这些结果集，最终生成的查询计划可能仅需要从相关表上读取很少的数据，得到一个执行效率高的计划，也可能需要读取相关表的全部数据经过一定运算后仅返回需要的结果行，相比前者这一般是个效率较差的计划。在这种场景的调优中，需要理解产生这两种计划的原因并通过一些优化方法获得效率较高的计划。
 
 ## 包含 LIMIT 的查询计划
 
-OceanBase 数据库中查询计划的执行使用火山模型的设计，即从计划树底端向上逐行输出数据，对于下方查询 `Q1_1`, 计划中 2 号算子每扫描一行便向 1 号算子输出一行数据，1 号算子同样每计算得到一行数据便向 0 号算子输出一行数据。如果计划中每个算子都可以获取孩子算子一行数据后，便像上输出一行数据，那么 `LIMIT` 算子就可以在仅读取特定行数数据后就停止继续读取数据结束执行，但是执行计划中存在下面两种类型的算子:
+OceanBase 数据库中查询计划的执行使用火山模型的设计，即从计划树底端向上逐行输出数据，对于下方查询 Q1_1, 计划中 2 号算子每扫描一行便向 1 号算子输出一行数据，1 号算子同样每计算得到一行数据便向 0 号算子输出一行数据。如果计划中每个算子都可以获取孩子算子一行数据后，便像上输出一行数据，那么 `LIMIT` 算子就可以在仅读取特定行数数据后就停止继续读取数据结束执行，但是执行计划中存在下面两种类型的算子:
 
 * 阻塞型算子: 需要读取孩子算子的所有数据行并进行运算后，才开始向上层算子吐出数据行，例如 `TOP-N SORT`，`HASH GROUP BY` 等算子
 * 流式算子: 读取部分孩子算子数据行后，便开始向上吐出数据行，例如 `TABLE SCAN`，`MERGE GROUP BY LIMIT` 等算子。
@@ -33,7 +33,7 @@ Outputs & filters:
       access([t1.c1], [t1.c2]), partitions(p0)
 ```
 
-通过在 `Q1_1` 查询中添加 `/*+no_use_hash_aggregation*/` 得到查询 `Q1_2`，此时得到的查询计划中不再有阻塞的 `HASH GROUP BY` 算子，在计划树中 1 号算子能够读取一定行数数据后就开始输出数据，而 0 号算子能够在输出数据行数达到预定值时便停止执行。由于 1 号算子使用了排序型算法，需要输入行是有序的，因此计划中又分配了阻塞算子（2 号排序算子），这导致了 3 号算子仍然要读取全部的数据行，因此这个计划执行效率并不比 `Q1_1` 生成能的计划效率高。如果能够消除这个排序算子，就可以得到一个不包含阻塞型算子的更优计划，例如 `Q1_3` 同原始查询 `Q1_1` 相同，仅通过创建索引消除了排序算子，关于排序相关优化在本文后续部分进行介绍。
+通过在 Q1_1 查询中添加 `/*+no_use_hash_aggregation*/` 得到查询 Q1_2，此时得到的查询计划中不再有阻塞的 `HASH GROUP BY` 算子，在计划树中 1 号算子能够读取一定行数的数据后就开始输出数据，而 0 号算子能够在输出数据行数达到预定值时便停止执行。由于 1 号算子使用了排序型算法，需要输入行是有序的，因此计划中又分配了阻塞算子（2 号排序算子），这导致了 3 号算子仍然要读取全部的数据行，因此这个计划执行效率并不比 Q1_1 查询生成的计划效率高。如果能够消除这个排序算子，就可以得到一个不包含阻塞型算子的更优计划，例如 Q1_3 查询同原始查询 Q1_1 相同，仅通过创建索引消除了排序算子，关于排序相关优化在本文后续部分进行介绍。
 
 ```sql
 Q1_2:
@@ -77,7 +77,7 @@ Outputs & filters:
       access([t1.c1], [t1.c2]), partitions(p0)
 ```
 
-优化器生成计划过程中，会同时生成多条使用阻塞或流式算子的计划，并按照一些经验规则和代价估计进行计划选择。当计划中分配了 `LIMIT` 相关算子时，整个计划的估行会重新调整从而影响计划的代价计算，这个影响对于阻塞算子和非阻塞算子是有很大差异的，从而得到更优的包含 `LIMIT` 的执行计划。如在查询 `Q1_2` 计划中可以看到，0、1、2 号算子的估行由于 `LIMIT` 的影响已经进行过调整，而 0 号和 1 号算子的代价很小（算子代价通过父算子累计代价减去子算子累计代价获得），但 2 号算子为阻塞型算子代价较大。
+优化器生成计划过程中，会同时生成多条使用阻塞或流式算子的计划，并按照一些经验规则和代价估计进行计划选择。当计划中分配了 `LIMIT` 相关算子时，整个计划的估行会重新调整从而影响计划的代价计算，这个影响对于阻塞算子和非阻塞算子是有很大差异的，从而得到更优的包含 `LIMIT` 的执行计划。如在查询 Q1_2 计划中可以看到，0、1、2 号算子的估行由于 `LIMIT` 的影响已经进行过调整，而 0 号和 1 号算子的代价很小（算子代价通过父算子累计代价减去子算子累计代价获得），但 2 号算子为阻塞型算子代价较大。
 
 ## 排序算子的生成与优化
 
@@ -88,11 +88,11 @@ Outputs & filters:
 在执行计划中，算子的输入序可能是有序的，对于基表扫描这个序来自于表结构索引产生的序，对于其它算子这个序可能来自孩子算子的输出序。不同于 `ORDER BY` 明确要求的输出序，但大部分使用排序算法的算子需要输入的序是可以调整的，并且这个序可以保留继承到算子输出序。通过优化选择排序型算子使用的序，可以避免进行多次排序。
 优化器在确定排序型算子使用的序时，会通过已有输入序和之后可能需要的序得到需要最终使用的序，以下面的查询为例，`GROUP BY` 使用 `MERGE GROUP BY` 算子时，是可以任意调整算子输入序中 `c1`, `c2` 的前后位置及排序方向的。
 
-`Q2_1_1` 中选择索引 `idx` 产生了 `c1`, `c2` 的序避免产生排序算子，并避免了 `order by c1, c2` 需要分配的排序算子。
+Q2_1_1 查询中选择索引 `idx` 产生了 `c1`, `c2` 的序避免产生排序算子，并避免了 `order by c1, c2` 需要分配的排序算子。
 
-`Q2_1_2` 中相对 `Q2_1_1` 调整了 `ORDER BY`，并指定使用主键，`MERGE GROUP BY` 直接使用 `ORDER BY C2, C1` 需要的序作为算子聚合的输入序，并在 `GROUP BY` 下方分配排序算子。 
+Q2_1_2 查询中相对 Q2_1_1 查询调整了 `ORDER BY`，并指定使用主键，`MERGE GROUP BY` 直接使用 `ORDER BY C2, C1` 需要的序作为算子聚合的输入序，并在 `GROUP BY` 下方分配排序算子。 
 
-`Q2_1_3` 相比 `Q2_1_2` 没有指定使用主键，按照代价生成了 `MERGE GROUP BY` 可直接使用 `idx` 产生的 `c1`, `c2` 的序，并在聚合后为 `ORDER BY c2, c1` 分配排序算子。 
+Q2_1_3 查询相比 Q2_1_2 查询没有指定使用主键，按照代价生成了 `MERGE GROUP BY` 可直接使用 `idx` 产生的 `c1`, `c2` 的序，并在聚合后为 `ORDER BY c2, c1` 分配排序算子。 
 
 ```sql
 create table t1(c1 int, c2 int, c3 int, c4 int, pk int primary key);
@@ -197,7 +197,7 @@ Outputs & filters:
 **前缀排序**
 
 需要分配排序算子时，如果算子输入序能够匹配部分期望的序，使用前缀排序利用部分输入序进行优化。
-下面查询使用 `idx` 索引后 `Table Scan` 算子输出序为`(c1, c2, c3)`, 使用前缀排序后对每组 `c1` 仅对 pk 进行排序。 
+下面查询使用 `idx` 索引后 `TABLE SCAN` 算子输出序为`(c1, c2, c3)`, 使用前缀排序后对每组 `c1` 仅对 pk 进行排序。 
 
 ```sql
 Q2_2_4:
