--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/8.common-memory-problems.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/8.common-memory-problems.md
@@ -64,7 +64,7 @@ obclient> SELECT * FROM oceanbase.GV$OB_MEMORY WHERE CTX_NAME=xxx AND tenant_id 
 
 `tenant_id =500` 的租户是 OB 内部租户，简称 500 租户。正常情况下，该报错会多次出现，最可能是机器系统内存被耗光或当前机器剩余内存已被预分配，用户无法再扩展。
 
-这种报错需要查看内存被占用情况，500 租户的内存使用量没有被 `V$OB_MEMORY` 和 `GV$OB_MEMORY` 统计，需要查询`oceanbase.GV$OB_MEMORY` 表，同时排查系统中内存的使用情况。如果是机器系统内存被耗光，判断是否为系统偶发情况。如果是，且同时没有业务影响，可等系统自行释放内存；如果有大的业务影响或系统正常进程活动导致内存被占用以及内存被预分配等情况，可考虑增加内存，具体操作请联系技术支持人员协助处理。
+这种报错需要查看内存被占用情况，500 租户的内存使用量没有被 `V$OB_MEMORY` 统计，需要查询 `oceanbase.GV$OB_MEMORY` 表，同时排查系统中内存的使用情况。如果是机器系统内存被耗光，判断是否为系统偶发情况。如果是，且同时没有业务影响，可等系统自行释放内存；如果有大的业务影响或系统正常进程活动导致内存被占用以及内存被预分配等情况，可考虑增加内存，具体操作请联系技术支持人员协助处理。
 
 ```sql
 SELECT * FROM oceanbase.GV$OB_MEMORY WHERE tenant_id=500;
