--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/15.gv-plan_cache_plan_stat-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/15.gv-plan_cache_plan_stat-of-mysql-mode.md
@@ -31,7 +31,7 @@ GV$OB_PLAN_CACHE_PLAN_STAT
 | SPECIAL_PARAMS        | varchar(4096)       | NO         | 表示不可参数化的参数值                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | PARAM_INFOS           | longtext            | NO         | 表示参数化信息                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
 | SYS_VARS              | varchar(4096)       | NO         | 影响计划的系统变量的值                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| CONFIGS               | varchar(4096)       | NO         |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| CONFIGS               | varchar(4096)       |NO         | 表示影响执行计划的配置项信息                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
 | PLAN_HASH             | bigint(20) unsigned | NO         | SQL 计划的 Hash 值                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | FIRST_LOAD_TIME       | timestamp(6)        | NO         | 第一次被加载时间                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 | SCHEMA_VERSION        | bigint(20)          | NO         | Schema 版本号                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
