--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/71.v-obrpc_incoming-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/71.v-obrpc_incoming-of-mysql-mode.md
@@ -30,6 +30,6 @@ GV$OB_RPC_INCOMING
 | QUEUE_TIME     | bigint(20)   | NO             | 在队列中等待的时间             |
 | PROCESS_TIME   | bigint(20)   | NO             | 实际处理消耗的时间             |
 | LAST_TIMESTAMP | timestamp(6) | NO             | 上次更新的时间               |
-| DCOUNT         | bigint(20)   | NO             |                       |
+| DCOUNT         | bigint(20)   | NO             | 每种 Pcode RPC 的请求计数，30 s 为一个统计周期  |
 
 
