--- a/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/90.ob_query_timeout-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/2.system-variable-of-mysql-mode/90.ob_query_timeout-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # ob_query_timeout
 
-`ob_query_timeout` 用于设置对 SQL 语句进行 DML 操作的超时时间，单位是微秒。
+`ob_query_timeout` 用于设置 SQL 最大执行时间，单位是微秒。
 
 | **属性**  |                                                   **描述**                                                   |
 |---------|------------------------------------------------------------------------------------------------------------|
