--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/58.v-session_event-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/58.v-session_event-of-mysql-mode.md
@@ -18,7 +18,7 @@ V$SESSION_EVENT
 | AVERAGE_WAIT | double | NO | 等待事件的平均等待时间，单位为百分之一秒 |
 | MAX_WAIT | double | NO | 等待事件的最长等待时间，单位为百分之一秒 |
 | TIME_WAITED_MICRO | bigint(20) | NO | 等待事件的总等待时间（微秒）  |
-| CPU | null | NO |  |
+| CPU | null | NO | 无效列 |
 | EVENT_ID | bigint(20) | NO | 等待事件的 ID |
 | WAIT_CLASS_ID | bigint(20) | NO | 等待事件所属类型的 ID |
 | WAIT_CLASS# | bigint(20) | NO | 等待事件所属类型的下标 |
